--- a/app/src/main/res/layout/command_list_line.xml
+++ b/app/src/main/res/layout/command_list_line.xml
@@ -5,21 +5,19 @@
     android:orientation="horizontal">
 
 
-    <EditText
+    <TextView
         android:id="@+id/command_name"
+        android:textAlignment="center"
+        android:gravity="center_horizontal"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"/>
 
 
-    <EditText
+    <TextView
         android:id="@+id/command_action"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"/>
-
-    <EditText
-        android:id="@+id/command_extra"
+        android:textAlignment="center"
+        android:gravity="center_horizontal"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"/>
