--- a/app/src/main/res/layout/create_command_layout.xml
+++ b/app/src/main/res/layout/create_command_layout.xml
@@ -67,7 +67,7 @@
 
         android:hint="Введите текст"
 
-        android:inputType="textShortMessage"
+        android:inputType="textMultiLine"
         app:layout_constraintBottom_toTopOf="@+id/extra_confirm_botton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
