--- a/app/src/main/res/layout/create_command_layout.xml
+++ b/app/src/main/res/layout/create_command_layout.xml
@@ -15,7 +15,6 @@
 
         android:hint="Голосовая команда"
         android:textAlignment="center"
-
         app:layout_constraintBottom_toTopOf="@+id/new_command_type_spinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,70 +24,104 @@
         android:id="@+id/new_command_type_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
+
+        android:layout_marginBottom="70dp"
         android:spinnerMode="dropdown"
-
-
-
-        android:layout_marginBottom="68dp"
-        app:layout_constraintBottom_toTopOf="@+id/extra_phone_number"
+        app:layout_constraintBottom_toTopOf="@+id/phoneLL"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
-
-
-
-    <EditText
-        android:id="@+id/extra_phone_number"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:digits="0123456789"
-        android:gravity="center_horizontal"
-
-        android:hint="номер телефона (без +7/8)"
-        android:inputType="phone"
-        android:textAlignment="center"
-        android:textSize="30sp"
-
-        app:layout_constraintBottom_toTopOf="@+id/extra_confirm_botton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 
     <EditText
         android:id="@+id/extra_text"
         android:layout_width="match_parent"
         android:layout_height="150sp"
-        android:layout_marginBottom="100dp"
-        android:textAlignment="viewStart"
-        android:textSize="25sp"
+        android:layout_marginBottom="50dp"
+        android:gravity="start"
 
         android:hint="Введите текст"
 
         android:inputType="textMultiLine"
+        android:textAlignment="viewStart"
+        android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/extra_confirm_botton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        android:gravity="start" />
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/extra_confirm_botton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:onClick="confirmClick"
-
-        android:text="Подтвердить"
-        android:textAlignment="center"
+        android:layout_marginBottom="50dp"
         android:gravity="center_horizontal"
-        android:textSize="30sp"
+        android:onClick="confirmClick"
+        android:text="Подтвердить"
 
+        android:textAlignment="center"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <LinearLayout
+        android:id="@+id/phoneLL"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="70dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/extra_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
+        <EditText
+            android:id="@+id/extra_phone_number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+
+            android:digits="0123456789"
+            android:gravity="center_horizontal"
+
+            android:hint="номер телефона (без +7/8)"
+            android:inputType="phone"
+            android:textAlignment="center"
+            android:textSize="30sp"
+
+            app:layout_constraintBottom_toTopOf="@+id/extra_confirm_botton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.371" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="5"
+            android:onClick="pickContactClick"
+
+            android:scaleType="fitCenter"
+
+            android:src="@drawable/contact_book"
+            tools:layout_editor_absoluteX="324dp"
+            tools:layout_editor_absoluteY="175dp" />
+
+    </LinearLayout>
+
+    <Spinner
+        android:id="@+id/messenger_apps_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="50dp"
+        app:layout_constraintBottom_toTopOf="@+id/extra_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/phoneLL" />
 </android.support.constraint.ConstraintLayout>
